# MerKurio

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
benchmarks/: README.md
benchmarks/patterns/: fastq_100x100mers.fasta  fastq_100x100mers.txt  fastq_100x100mers_with_rc.txt  fastq_100x31mers.fasta  fastq_100x31mers.txt  fastq_100x31mers_with_rc.txt  fastq_1x100mers.fasta  fastq_1x100mers.txt  fastq_1x100mers_with_rc.txt  fastq_1x31mers.fasta  fastq_1x31mers.txt  fastq_1x31mers_with_rc.txt
benchmarks/results/: summary.md  versions.txt
benchmarks/scripts/: 01-download-data.sh  02-generate-kmers.sh  03-run-benchmarks.sh  04-format-results.sh
example-minimal/: README.md  example.sh  sample.sam
example-workflow/: README.md  significant_kmers.txt
example-workflow/data/: significant_kmers.txt  wildtype.2.bt2  wildtype.3.bt2  wildtype.4.bt2  wildtype.rev.2.bt2
example-workflow/logs/: mutant_extracted.stats.json
example-workflow/output/: mutant_extracted.sam  mutant_extracted.sorted.sam  mutant_extracted.sorted.tagged.sam  mutant_extracted_1.fastq  mutant_extracted_2.fastq
manual/: book.toml
manual/src/: SUMMARY.md  chapter_1.md  extract-example.md  extract.md  installation.md  introduction.md  json-jq.md  json-python.md  json.md  log.md  manual.md  minimal.md  practical-tutorial.md  tag-example.md  tag.md  workflow.md
src/: cmd_extract.rs  cmd_tag.rs  helpers.rs  logger.rs  main.rs  pattern_matching.rs  pattern_preprocessing.rs
(+34 files in other folders)
