[package]
name = "merkurio"
version = "1.0.0"
edition = "2024"
authors = ["Lukas Schönmann <lukas.schoenmann@boku.ac.at>"]
repository = "https://github.com/lschoenm/MerKurio"
license = "MIT"
description = "Quick k-mer-based FASTA/FASTQ sequence record extraction, and SAM/BAM record filtering plus file annotation with k-mer tags."

documentation = "https://lschoenm.github.io/MerKurio/"
readme = "README.md"
keywords = ["k-mer", "fasta", "fastq", "sam", "bam"]
categories = ["science::bioinformatics", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.98"
bam = "0.1.4"
clap = { version = "4.5.41", features = ["derive", "cargo"] }
jiff = { version = "0.2.15", features = ["serde"] }
needletail = { version = "0.6.3", features = ["compression"] }
serde_json = "1.0.141"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.10.1"

# May improve performance
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
